Reference mask from html

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </header>
     <section>
       <div id="grid">
-        <svg id="window">
+        <svg id="window" style="mask: url(#mask);">
           <rect width="675" height="675" fill="grey" />
         </svg>
       </div>
