--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+    <link href="style.css" rel="stylesheet" type='text/css'>
     <script src="game.js" defer></script>
     <title>2048.js</title>
   </head>
@@ -10,11 +11,11 @@
     <svg>
       <defs>
         <pattern id="repeat" width=".25" height=".25">
-          <rect width="150" height="150" rx="15" ry="15" fill="black" />
+          <rect width="100" height="100" rx="10" ry="10" fill="black" />
         </pattern>
         <mask id="mask">
-          <rect width="675" height="675" fill="white" />
-          <rect x="15" y="15" width="660" height="660" fill="url(#repeat)" />
+          <rect width="450" height="450" fill="white" />
+          <rect x="10" y="10" width="440" height="440" fill="url(#repeat)" />
         </mask>
       </defs>
     </svg>
@@ -24,7 +25,7 @@
     <section>
       <div id="grid">
         <svg id="window" style="mask: url(#mask);">
-          <rect width="675" height="675" fill="grey" />
+          <rect width="450" height="450" fill="#BBADA0" />
         </svg>
       </div>
     </section>
