Touch out header

--- a/src/index.html
+++ b/src/index.html
@@ -21,23 +21,30 @@
       </defs>
     </svg>
     <header>
-      <h1>2048.js</h1>
+      <div class="container">
+        <img class="icon" src="assets/icon.png")>
+        <div class="heading">
+          <h1>2048.js</h1>
+          <p>Reproduction of the highly addictive
+            mobile game <br>using CSS and Javascript</p>
+        </div>
+      </div>
     </header>
     <section>
-      <div class="score-board">
+      <div class="container">
         <div>
-          <div class="score-box">
+          <div class="score-board">
             <h4>Moves</h4>
-            <p id="moves">0</p>
+            <p id="moves" class="score">0</p>
           </div>
-          <div class="score-box">
+          <div class="score-board">
             <h4>Score</h4>
-            <p id="score">0</p>
+            <p id="score" class="score">0</p>
           </div>
         </div>
-        <div class="score-box">
+        <div class="score-board">
           <h4>Elapsed</h4>
-          <p id="elapsed">0:00</p>
+          <p id="elapsed" class="score">0:00</p>
         </div>
       </div>
       <div id="grid">
