Put an anchor to my Github repo on header, Included CSS reset

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,16 @@
       </defs>
     </svg>
     <header>
+      <a href="https://github.com/yongjun21/Project2048">
       <div class="container">
         <img class="icon" src="assets/icon.png")>
         <div class="heading">
           <h1>2048.js</h1>
           <p>Reproduction of the highly addictive
-            mobile game <br>using CSS and Javascript</p>
+            mobile game using CSS and Javascript. Created by @<span>yongjun21<span></p>
         </div>
       </div>
+    </a>
     </header>
     <section>
       <div class="container">
