Fixed issue of overlapping async events

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       </div>
     </a>
     </header>
-    <section>
+    <section id="touchZone">
       <div class="container">
         <div>
           <div class="score-board">
