--- a/src/index.html
+++ b/src/index.html
@@ -3,24 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=480">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="assets/icon.png" rel="icon" sizes="192x192">
+    <link href="assets/icon.png" rel="icon" sizes="128x128">
     <script src="game.js" defer></script>
     <title>2048.js</title>
   </head>
   <body>
-    <svg>
-      <defs>
-        <pattern id="repeat" width=".25" height=".25">
-          <rect width="100" height="100" rx="10" ry="10" fill="black" />
-        </pattern>
-        <mask id="mask">
-          <rect width="440" height="440" fill="white" />
-          <rect width="440" height="440" fill="url(#repeat)" />
-        </mask>
-      </defs>
-    </svg>
     <header>
       <a href="https://github.com/yongjun21/Project2048">
       <div class="container">
@@ -51,8 +41,18 @@
         </div>
       </div>
       <div id="grid">
-        <svg id="window" style="mask: url(#mask);">
-          <rect width="430" height="430" fill="#BBADA0" />
+        <svg id="window">
+          <defs>
+            <pattern id="repeat" width=".25" height=".25">
+              <rect width="100" height="100" rx="10" ry="10" fill="black" />
+            </pattern>
+            <mask id="mask">
+              <rect width="440" height="440" fill="white" />
+              <rect width="440" height="440" fill="url(#repeat)" />
+            </mask>
+          </defs>
+          <rect width="430" height="430" fill="#BBADA0"
+            style="mask: url(#mask);" />
         </svg>
       </div>
     </section>
