--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
     <header>
       <a href="https://github.com/yongjun21/Project2048">
       <div class="container">
-        <img class="icon" src="assets/icon.png")>
+        <img class="icon" src="assets/icon.png">
         <div class="heading">
           <h1>2048.js</h1>
           <p>Reproduction of the highly addictive
-            mobile game using CSS and Javascript. Created by @<span>yongjun21<span></p>
+            mobile game using CSS and Javascript. Created by @<span>yongjun21</span></p>
         </div>
       </div>
     </a>
@@ -44,15 +44,15 @@
         <svg id="window">
           <defs>
             <pattern id="repeat" width=".25" height=".25">
-              <rect width="100" height="100" rx="10" ry="10" fill="black" />
+              <rect width="100" height="100" rx="10" ry="10" fill="black"></rect>
             </pattern>
             <mask id="mask">
-              <rect width="440" height="440" fill="white" />
-              <rect width="440" height="440" fill="url(#repeat)" />
+              <rect width="440" height="440" fill="white"></rect>
+              <rect width="440" height="440" fill="url(#repeat)"></rect>
             </mask>
           </defs>
           <rect width="430" height="430" fill="#BBADA0"
-            style="mask: url(#mask);" />
+            style="mask: url(#mask);"></rect>
         </svg>
       </div>
     </section>
